--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,11 +30,11 @@ button:hover{
   background: rgba(255, 166, 0, 0.593);
 }
 .circle{
-  width: 385px;
+  /* width: 385px;
   height: 385px;
   border-radius: 50%;
   position: relative;
-  top: 80px;
+  top: 80px; */
   background: linear-gradient(to right, #FFFFFF00, #FF8233);
   
 }
