toggle dark-light mode implemented

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,10 @@ body {
   scroll-behavior: smooth;
 }
 
+.dark{
+  background-color: #000000;
+  color: #FFFFFF;
+}
 
 button {
   background: #FD6F00;
